[gd_scene load_steps=22 format=3 uid="uid://oj5bqpuvoqxq"]

[ext_resource type="Script" path="res://Scripts/GUI/Settings.gd" id="1_4hc01"]
[ext_resource type="FontFile" uid="uid://cwdbww5rl1wbq" path="res://PirateSprite/Font/kenvector_future.ttf" id="1_8k1q6"]
[ext_resource type="Texture2D" uid="uid://d3614y35114kk" path="res://PirateSprite/Sprites/UI/Pack/blue_button00.png" id="2_a2l14"]
[ext_resource type="Texture2D" uid="uid://dyou0c1llidcd" path="res://PirateSprite/Sprites/UI/Pack/blue_button01.png" id="3_5jumv"]
[ext_resource type="Texture2D" uid="uid://bakf58ndv48b8" path="res://PirateSprite/Sprites/UI/Pack/blue_button02.png" id="4_42cxj"]
[ext_resource type="LabelSettings" uid="uid://cf34xomloh8il" path="res://Settings/FontSettings/LabelSettings.tres" id="5_w5be8"]
[ext_resource type="FontFile" uid="uid://cn5odjput1dqk" path="res://PirateSprite/Font/Quicksand-Bold.ttf" id="8_ivrr2"]
[ext_resource type="Texture2D" uid="uid://ditrfi3ji6swq" path="res://PirateSprite/Sprites/UI/Pack/grey_sliderRight.png" id="9_35ado"]
[ext_resource type="Texture2D" uid="uid://djianou5d8m3t" path="res://PirateSprite/Sprites/UI/Pack/grey_tickGrey.png" id="10_s3iw4"]
[ext_resource type="AudioStream" uid="uid://dcfsd34y4eldd" path="res://PirateSprite/Sounds/SoundEffect/UI/rollover1.ogg" id="11_beg4g"]
[ext_resource type="Texture2D" uid="uid://dy25i5paa12hd" path="res://PirateSprite/Sprites/UI/Pack/grey_arrowDownWhite.png" id="12_6l6y4"]
[ext_resource type="FontFile" uid="uid://ckk4cbv0sy8wt" path="res://PirateSprite/Font/kenvector_future_thin.ttf" id="13_4yoir"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fh3bk"]
bg_color = Color(0.117188, 0.652344, 0.878906, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.207031, 0.726563, 0.949219, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0.0976563, 0.535156, 0.71875, 1)
shadow_size = 3

[sub_resource type="LabelSettings" id="LabelSettings_bx4pc"]
line_spacing = 0.0
font = ExtResource("1_8k1q6")
font_size = 28

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tr3r7"]
bg_color = Color(0.929688, 0.929688, 0.929688, 1)
border_width_left = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.996094, 0.996094, 0.996094, 1)
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0.596078, 0.596078, 0.596078, 1)
shadow_size = 3
shadow_offset = Vector2(0, 3)

[sub_resource type="LabelSettings" id="LabelSettings_q4jts"]
line_spacing = 0.0
font = ExtResource("8_ivrr2")
font_size = 18
font_color = Color(0.168627, 0.168627, 0.168627, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1vtx3"]
bg_color = Color(0.501961, 0.819608, 0.992157, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.501961, 0.819608, 0.992157, 1)
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u5obg"]
bg_color = Color(0.121569, 0.654902, 0.882353, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q8ntc"]
bg_color = Color(0.0901961, 0.603922, 0.815686, 1)
border_color = Color(0.439216, 0.2, 0.733333, 1)
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7p2s4"]
bg_color = Color(0.12549, 0.670588, 0.901961, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_size = 1

[sub_resource type="LabelSettings" id="LabelSettings_lnnqo"]
font = ExtResource("1_8k1q6")
font_size = 12
font_color = Color(0.137255, 0.137255, 0.137255, 1)

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4hc01")
metadata/_edit_vertical_guides_ = [453.073]

[node name="Panel" type="Panel" parent="."]
modulate = Color(1, 1, 1, 0.603922)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="Back" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -420.253
offset_top = -464.363
offset_right = -230.253
offset_bottom = -415.363
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.662877, 0.783672)
texture_normal = ExtResource("2_a2l14")
texture_pressed = ExtResource("3_5jumv")
texture_hover = ExtResource("4_42cxj")
ignore_texture_size = true

[node name="Label" type="Label" parent="Back"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -73.5
offset_top = -15.0
offset_right = 73.5
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
text = "BACK TO MENU"
label_settings = ExtResource("5_w5be8")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="BluePanel" type="Panel" parent="."]
layout_mode = 0
offset_left = 188.427
offset_top = 33.4897
offset_right = 657.427
offset_bottom = 80.4897
theme_override_styles/panel = SubResource("StyleBoxFlat_fh3bk")

[node name="Label" type="Label" parent="BluePanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -102.5
offset_top = -22.0
offset_right = 102.5
offset_bottom = 22.0
grow_horizontal = 2
grow_vertical = 2
text = "Setting"
label_settings = SubResource("LabelSettings_bx4pc")
horizontal_alignment = 1
vertical_alignment = 1

[node name="GreyPanel" type="Panel" parent="."]
layout_mode = 0
offset_left = 188.427
offset_top = 73.4897
offset_right = 657.427
offset_bottom = 424.49
theme_override_styles/panel = SubResource("StyleBoxFlat_tr3r7")

[node name="Music" type="Control" parent="."]
anchors_preset = 0
offset_left = -28.5732
offset_top = -36.5103
offset_right = 11.4268
offset_bottom = 3.48975

[node name="Music" type="Label" parent="Music"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 169.765
offset_top = 95.3849
offset_right = 370.765
offset_bottom = 145.385
grow_horizontal = 2
grow_vertical = 2
text = "Music :"
label_settings = SubResource("LabelSettings_q4jts")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PersenMusic" type="Label" parent="Music"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 614.615
offset_top = 107.859
offset_right = 655.615
offset_bottom = 132.859
grow_horizontal = 2
grow_vertical = 2
text = "80%"
label_settings = SubResource("LabelSettings_q4jts")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MusicSlider" type="HSlider" parent="Music"]
layout_mode = 0
offset_left = 328.0
offset_top = 125.0
offset_right = 628.0
offset_bottom = 156.0
theme_override_icons/grabber = ExtResource("9_35ado")
theme_override_icons/grabber_highlight = ExtResource("9_35ado")
theme_override_icons/grabber_disabled = ExtResource("9_35ado")
theme_override_icons/tick = ExtResource("10_s3iw4")
theme_override_styles/slider = SubResource("StyleBoxFlat_1vtx3")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_u5obg")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_q8ntc")
min_value = -24.0
max_value = 6.0

[node name="Slider" type="AudioStreamPlayer2D" parent="Music"]
position = Vector2(443.499, 257.709)
stream = ExtResource("11_beg4g")
volume_db = 12.0

[node name="Sfx" type="Control" parent="."]
anchors_preset = 0
offset_left = -28.5732
offset_top = -36.5103
offset_right = 11.4268
offset_bottom = 3.48975

[node name="Sfx" type="Label" parent="Sfx"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 174.332
offset_top = 148.073
offset_right = 375.331
offset_bottom = 198.073
grow_horizontal = 2
grow_vertical = 2
text = "SFX :"
label_settings = SubResource("LabelSettings_q4jts")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PersenSfx" type="Label" parent="Sfx"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 619.182
offset_top = 164.789
offset_right = 652.182
offset_bottom = 186.789
grow_horizontal = 2
grow_vertical = 2
text = "50%"
label_settings = SubResource("LabelSettings_q4jts")
horizontal_alignment = 1
vertical_alignment = 1

[node name="SfxSlider" type="HSlider" parent="Sfx"]
layout_mode = 0
offset_left = 328.0
offset_top = 180.0
offset_right = 627.0
offset_bottom = 211.0
theme_override_icons/grabber = ExtResource("9_35ado")
theme_override_icons/grabber_highlight = ExtResource("9_35ado")
theme_override_icons/grabber_disabled = ExtResource("9_35ado")
theme_override_icons/tick = ExtResource("10_s3iw4")
theme_override_styles/slider = SubResource("StyleBoxFlat_1vtx3")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_u5obg")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_q8ntc")
min_value = -24.0
max_value = 24.0

[node name="Slider2" type="AudioStreamPlayer2D" parent="Sfx"]
position = Vector2(446.496, 253.214)
stream = ExtResource("11_beg4g")
volume_db = 12.0

[node name="Songs" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.5732
offset_top = -56.5103
offset_right = -8.57318
offset_bottom = -16.5103
grow_horizontal = 2
grow_vertical = 2

[node name="Soundtrack" type="Label" parent="Songs"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.265
offset_top = -4.23445
offset_right = -100.265
offset_bottom = 15.7655
grow_horizontal = 2
grow_vertical = 2
text = "Songs :"
label_settings = SubResource("LabelSettings_q4jts")
horizontal_alignment = 1
vertical_alignment = 1

[node name="SongOption" type="OptionButton" parent="Songs"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -96.0
offset_top = -13.0
offset_right = 113.0
offset_bottom = 26.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.101961, 0.101961, 0.101961, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("13_4yoir")
theme_override_font_sizes/font_size = 14
theme_override_icons/arrow = ExtResource("12_6l6y4")
theme_override_styles/focus = SubResource("StyleBoxFlat_7p2s4")
theme_override_styles/normal = SubResource("StyleBoxFlat_7p2s4")
theme_override_styles/hover = SubResource("StyleBoxFlat_7p2s4")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7p2s4")
alignment = 1
clip_text = true
icon_alignment = 2
expand_icon = true
item_count = 4
selected = 0
popup/item_0/text = "We're Bird People Now"
popup/item_0/id = 1
popup/item_1/text = "Long Road Ahead"
popup/item_1/id = 2
popup/item_2/text = "On The Move"
popup/item_2/id = 3
popup/item_3/text = "World Travelers"
popup/item_3/id = 4

[node name="Song" type="AudioStreamPlayer2D" parent="Songs"]

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 201.057
offset_top = 400.679
offset_right = 336.057
offset_bottom = 417.679
text = "FAI Campus Rush"
label_settings = SubResource("LabelSettings_lnnqo")

[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="value_changed" from="Music/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="Sfx/SfxSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="item_selected" from="Songs/SongOption" to="." method="_on_song_option_item_selected"]
